# Copula_package

./: .gitignore  LICENSE  README.md  copula_density.py  requirements.txt  setup.cfg
src/copula_package/: copula_density.py  functions.py
src/copuladensity_pkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
