[metadata]
name = copula_density-pkg
version = 0.0.3
author = Shanshan Wang
author_email = shanshan.wang@uni-due.de
description = A package for calculate and draw copula density
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shannwang/Copula_package
project_urls =
    Bug Tracker = https://github.com/shannwang/Copula_package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
